# GRUPO_1_4698_ESTRUCTURA_DE_DATOS

./: ENCABEZADO.txt
CASTING/: Cast.h  CastToChar.cpp  CastToChar.h  CastToFloat.cpp  CastToFloat.h  CastToInt.cpp  CastToInt.h  Casting.cpp  Casting.h  Input.cpp  Input.h  Menu.cpp  Menu.h  UNITEXT.txt  Unitext.txt  Validador.h  ValidadorAscii.cpp  ValidadorAscii.h  ValidadorNumero.cpp  ValidadorNumero.h  main.cpp
LIBRERIAS_Y_UTILIDADES/sources/src/: CMakeLists.txt  main.cpp
LISTAENLAZADASIMPLE/: Input.cpp  Input.h  List.h  ListInteger.cpp  ListInteger.h  Menu.cpp  Menu.h  Node.cpp  Node.h  Unitext.txt  main.cpp
LISTA_DOBLEMENTE_ENLAZADA/: DoublyLinkedList.cpp  DoublyLinkedList.h  Input.cpp  List.h  Listas_Doblemente_Enlazadas.oob  Menu.cpp  Menu.h  Node.cpp  Node.h  main.cpp
LISTA_DOBLEMENTE_ENLAZADA_CIRCULAR/: CircularDoublyLinkedList.hpp  Input.cpp  Input.hpp  List.hpp  Menu.hpp  NodeDouble.hpp  main.cpp
OPERADORES_SOBRECARGADOS/: A.cpp  A.h  B.cpp  B.h  Cadena.cpp  Cadena.h  ClaseA.cpp  ClaseA.h  ClaseB.cpp  ClaseB.h  Complejo.cpp  Complejo.h  Conjuntos.h  Consola.cpp  Consola.h  Cuadrado.cpp  Cuadrado.h  Cuadro.cpp  Cuadro.h  Persona.cpp  Persona.h  Reloj.cpp  Reloj.h  Unitext.txt  Valor.cpp  Valor.h  Vector.cpp  Vector.h  main.cpp  quebrado.h
PILAS_COLAS/: HandleConsole.cpp  HandleConsole.hpp  MenuInitial.cpp  MenuInitial.hpp  main.cpp
PROYECTO_PRIMER_PARCIAL/: CircularDoublyLinkedList.hpp  DoubleNode.hpp  EmailGenerator.cpp  EmailGenerator.hpp  HandleConsole.cpp  HandleConsole.hpp  IdVerificator.cpp  IdVerificator.hpp  Input.cpp  Input.hpp  List.hpp  (+17 more)
(+127 files in other folders)
